Wed May 15 18:15:45 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkdnd.c (_gtk_drag_source_handle_event): Don't
	call gdk_pointer_grab() to change the cursor if we've
	already ungrabbed on button release / escape.
	(#80420, Dave Camp)

Wed May 15 17:12:50 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktooltips.c: Special case menu items to
	pop down on motion. (#75961)

	* tests/testgtk.c (create_item_factory): Add tooltips
	to the File menu.

	* gtk/gtkentry.c (update_im_cursor_location): Fix 
	cursor locations passed to the IM context.
	(#80027, Yao Zhang)

Wed May 15 16:52:57 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkfontsel.c: Update from contents of size entry
	on focus out. (#76493, Lauris Kaplinski)

	* gtk/gtkclipboard.c (selection_get_cb): Fix backwads
	info/time arguments. (#80226)

Wed May 15 11:13:19 2002  Owen Taylor  <otaylor@redhat.com>

	* configure.in gtk/stock-icons/Makefile.am: If not
	building libpng, don't rebuild gtkstockpixbufs.h
	(#81819, Bill Janssen)

2002-05-15  jacob berkman  <jacob@ximian.com>

	* demos/gtk-demo/Makefile.am (demos.h): just run perl on the
	geninclude script manually

Tue May 14 19:53:15 2002  Owen Taylor  <otaylor@redhat.com>

	* demos/gtk-demo/geninclude.pl.in configure.in:
	Subsitute in @PERL@ instead of hardcoded 
	/usr/bin/perl. (#78355, Gareth Pearce. Fix based
	on patch from Matthias Clasen)

	* gdk/Makefile.am: Patch from Daniel Elstner to use glib-mkenums
	instead of makeenums.pl.

	* gdk/{x11,linux-fb,win32}/Makefile.am: Hack to
	get gdkenumtypes.h built first.

Tue May 14 18:41:58 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/stock-icons/Makefile.am (gtkstockpixbufs.h): 
	Remove the result file on error. (#79929, David
	Highley)

	* gtk/gtkoptionmenu.c (gtk_option_menu_remove_menu):
	If the menu is currently active, cancel it before
	setting the new menu. (#79162, Jonathan Blandford.)

Tue May 14 18:13:10 2002  Owen Taylor  <otaylor@redhat.com>
